--- a/cpp/unseen.html
+++ b/cpp/unseen.html
@@ -10,10 +10,8 @@
 <br>
 <img src="https://tuneronline.ru/images/chords/guitar/max/cdiez7.jpg" height="50">
 <img src="https://tuneronline.ru/images/chords/guitar/max/fdiezm.jpg" height="50">
-(
-<img src="https://tuneronline.ru/images/chords/guitar/max/cdiez.jpg" height="50">
-)
-<br>
+(<img src="https://tuneronline.ru/images/chords/guitar/max/cdiez7.jpg" height="50">
+)<br>
 <img src="https://tuneronline.ru/images/chords/guitar/max/fdiezm.jpg" height="50">
 <br>
 <img src="https://tuneronline.ru/images/chords/guitar/max/hm.jpg" height="50">
@@ -34,10 +32,8 @@
 <img src="https://tuneronline.ru/images/chords/guitar/max/hm.jpg" height="50">
 <img src="https://tuneronline.ru/images/chords/guitar/max/cdiez7.jpg" height="50">
 <img src="https://tuneronline.ru/images/chords/guitar/max/d.jpg" height="50">
-(
-<img src="https://tuneronline.ru/images/chords/guitar/max/fdiez.jpg" height="50">
-)
-<br>
+(<img src="https://tuneronline.ru/images/chords/guitar/max/fdiez7.jpg" height="50">
+)<br>
 <img src="https://tuneronline.ru/images/chords/guitar/max/hm.jpg" height="50">
 <img src="https://tuneronline.ru/images/chords/guitar/max/cdiez7.jpg" height="50">
 <img src="https://tuneronline.ru/images/chords/guitar/max/fdiezm.jpg" height="50">
@@ -55,10 +51,8 @@
 <br>
 <img src="https://tuneronline.ru/images/chords/guitar/max/d7.jpg" height="50">
 <img src="https://tuneronline.ru/images/chords/guitar/max/gm.jpg" height="50">
-(
-<img src="https://tuneronline.ru/images/chords/guitar/max/d.jpg" height="50">
-)
-<br>
+(<img src="https://tuneronline.ru/images/chords/guitar/max/d7.jpg" height="50">
+)<br>
 <img src="https://tuneronline.ru/images/chords/guitar/max/gm.jpg" height="50">
 <br>
 <img src="https://tuneronline.ru/images/chords/guitar/max/cm.jpg" height="50">
@@ -79,10 +73,8 @@
 <img src="https://tuneronline.ru/images/chords/guitar/max/cm.jpg" height="50">
 <img src="https://tuneronline.ru/images/chords/guitar/max/d7.jpg" height="50">
 <img src="https://tuneronline.ru/images/chords/guitar/max/eb.jpg" height="50">
-(
-<img src="https://tuneronline.ru/images/chords/guitar/max/d.jpg" height="50">
-)
-<br>
+(<img src="https://tuneronline.ru/images/chords/guitar/max/d7.jpg" height="50">
+)<br>
 <img src="https://tuneronline.ru/images/chords/guitar/max/cm.jpg" height="50">
 <img src="https://tuneronline.ru/images/chords/guitar/max/e7.jpg" height="50">
 <img src="https://tuneronline.ru/images/chords/guitar/max/gm.jpg" height="50">
