Distinguish lyrics and chords

--- a/unseen.html
+++ b/unseen.html
@@ -1,96 +1,252 @@
-<img src="https://tuneronline.ru/images/chords/guitar/max/fdiezm.jpg" height="50">
-<img src="https://tuneronline.ru/images/chords/guitar/max/a.jpg" height="50">
-<img src="https://tuneronline.ru/images/chords/guitar/max/hm.jpg" height="50">
-<img src="https://tuneronline.ru/images/chords/guitar/max/cdiez7.jpg" height="50">
+<img src="https://tuneronline.ru/images/chords/guitar/max/fdiezm.jpg" height="60">
+<img src="https://tuneronline.ru/images/chords/guitar/max/a.jpg" height="60">
+<img src="https://tuneronline.ru/images/chords/guitar/max/hm.jpg" height="60">
+<img src="https://tuneronline.ru/images/chords/guitar/max/cdiez7.jpg" height="60">
 <br>
 <br>
-<img src="https://tuneronline.ru/images/chords/guitar/max/fdiezm.jpg" height="50">
+<font face="sans-serif" size="5">В</font>
+<font face="sans-serif" size="5">каждом</font>
+<font face="sans-serif" size="5">поезде</font>
+<font face="sans-serif" size="5">метро</font>
+<img src="https://tuneronline.ru/images/chords/guitar/max/fdiezm.jpg" height="60">
 <br>
-<img src="https://tuneronline.ru/images/chords/guitar/max/hm.jpg" height="50">
+<font face="sans-serif" size="5">Есть</font>
+<font face="sans-serif" size="5">невидимый</font>
+<font face="sans-serif" size="5">вагон,</font>
+<img src="https://tuneronline.ru/images/chords/guitar/max/hm.jpg" height="60">
 <br>
-<img src="https://tuneronline.ru/images/chords/guitar/max/cdiez7.jpg" height="50">
-<img src="https://tuneronline.ru/images/chords/guitar/max/fdiezm.jpg" height="50">
+<font face="sans-serif" size="5">Он</font>
+<font face="sans-serif" size="5">над</font>
+<font face="sans-serif" size="5">рельсами</font>
+<font face="sans-serif" size="5">парит</font>
+<font face="sans-serif" size="5">невесомо.</font>
+<img src="https://tuneronline.ru/images/chords/guitar/max/cdiez7.jpg" height="60">
+<img src="https://tuneronline.ru/images/chords/guitar/max/fdiezm.jpg" height="60">
 (
-<img src="https://tuneronline.ru/images/chords/guitar/max/cdiez.jpg" height="50">
+<img src="https://tuneronline.ru/images/chords/guitar/max/cdiez.jpg" height="60">
 )
 <br>
-<img src="https://tuneronline.ru/images/chords/guitar/max/fdiezm.jpg" height="50">
+<font face="sans-serif" size="5">Там</font>
+<font face="sans-serif" size="5">лучится</font>
+<font face="sans-serif" size="5">дивный</font>
+<font face="sans-serif" size="5">свет,</font>
+<img src="https://tuneronline.ru/images/chords/guitar/max/fdiezm.jpg" height="60">
 <br>
-<img src="https://tuneronline.ru/images/chords/guitar/max/hm.jpg" height="50">
-<img src="https://tuneronline.ru/images/chords/guitar/max/d.jpg" height="50">
+<font face="sans-serif" size="5">Там</font>
+<font face="sans-serif" size="5">журчит</font>
+<font face="sans-serif" size="5">хрустальный</font>
+<font face="sans-serif" size="5">звон,</font>
+<img src="https://tuneronline.ru/images/chords/guitar/max/hm.jpg" height="60">
+<img src="https://tuneronline.ru/images/chords/guitar/max/d.jpg" height="60">
 <br>
-<img src="https://tuneronline.ru/images/chords/guitar/max/e.jpg" height="50">
-<img src="https://tuneronline.ru/images/chords/guitar/max/a.jpg" height="50">
+<font face="sans-serif" size="5">И</font>
+<font face="sans-serif" size="5">вообще</font>
+<font face="sans-serif" size="5">как</font>
+<font face="sans-serif" size="5">будто</font>
+<font face="sans-serif" size="5">всё</font>
+<font face="sans-serif" size="5">по-другому.</font>
+<img src="https://tuneronline.ru/images/chords/guitar/max/e.jpg" height="60">
+<img src="https://tuneronline.ru/images/chords/guitar/max/a.jpg" height="60">
 <br>
-<img src="https://tuneronline.ru/images/chords/guitar/max/hm.jpg" height="50">
-<img src="https://tuneronline.ru/images/chords/guitar/max/cdiez7.jpg" height="50">
-<img src="https://tuneronline.ru/images/chords/guitar/max/fdiezm.jpg" height="50">
+<font face="sans-serif" size="5">Так</font>
+<font face="sans-serif" size="5">красиво,</font>
+<font face="sans-serif" size="5">что</font>
+<font face="sans-serif" size="5">не</font>
+<font face="sans-serif" size="5">верится</font>
+<font face="sans-serif" size="5">глазам.</font>
+<img src="https://tuneronline.ru/images/chords/guitar/max/hm.jpg" height="60">
+<img src="https://tuneronline.ru/images/chords/guitar/max/cdiez7.jpg" height="60">
+<img src="https://tuneronline.ru/images/chords/guitar/max/fdiezm.jpg" height="60">
 <br>
-<img src="https://tuneronline.ru/images/chords/guitar/max/hm.jpg" height="50">
-<img src="https://tuneronline.ru/images/chords/guitar/max/cdiez7.jpg" height="50">
-<img src="https://tuneronline.ru/images/chords/guitar/max/fdiezm.jpg" height="50">
-<img src="https://tuneronline.ru/images/chords/guitar/max/fdiez7.jpg" height="50">
+<font face="sans-serif" size="5">В</font>
+<font face="sans-serif" size="5">нём</font>
+<font face="sans-serif" size="5">уедешь</font>
+<font face="sans-serif" size="5">—</font>
+<font face="sans-serif" size="5">не</font>
+<font face="sans-serif" size="5">воротишься</font>
+<font face="sans-serif" size="5">назад,</font>
+<img src="https://tuneronline.ru/images/chords/guitar/max/hm.jpg" height="60">
+<img src="https://tuneronline.ru/images/chords/guitar/max/cdiez7.jpg" height="60">
+<img src="https://tuneronline.ru/images/chords/guitar/max/fdiezm.jpg" height="60">
+<img src="https://tuneronline.ru/images/chords/guitar/max/fdiez7.jpg" height="60">
 <br>
-<img src="https://tuneronline.ru/images/chords/guitar/max/hm.jpg" height="50">
-<img src="https://tuneronline.ru/images/chords/guitar/max/cdiez7.jpg" height="50">
-<img src="https://tuneronline.ru/images/chords/guitar/max/d.jpg" height="50">
+<font face="sans-serif" size="5">Не</font>
+<font face="sans-serif" size="5">подашь</font>
+<font face="sans-serif" size="5">вестей</font>
+<font face="sans-serif" size="5">родным</font>
+<font face="sans-serif" size="5">и</font>
+<font face="sans-serif" size="5">знакомым,</font>
+<img src="https://tuneronline.ru/images/chords/guitar/max/hm.jpg" height="60">
+<img src="https://tuneronline.ru/images/chords/guitar/max/cdiez7.jpg" height="60">
+<img src="https://tuneronline.ru/images/chords/guitar/max/d.jpg" height="60">
 (
-<img src="https://tuneronline.ru/images/chords/guitar/max/fdiez.jpg" height="50">
+<img src="https://tuneronline.ru/images/chords/guitar/max/fdiez.jpg" height="60">
 )
 <br>
-<img src="https://tuneronline.ru/images/chords/guitar/max/hm.jpg" height="50">
-<img src="https://tuneronline.ru/images/chords/guitar/max/cdiez7.jpg" height="50">
-<img src="https://tuneronline.ru/images/chords/guitar/max/fdiezm.jpg" height="50">
+<font face="sans-serif" size="5">Не</font>
+<font face="sans-serif" size="5">подашь</font>
+<font face="sans-serif" size="5">вестей</font>
+<font face="sans-serif" size="5">родным</font>
+<font face="sans-serif" size="5">и</font>
+<font face="sans-serif" size="5">знакомым.</font>
+<img src="https://tuneronline.ru/images/chords/guitar/max/hm.jpg" height="60">
+<img src="https://tuneronline.ru/images/chords/guitar/max/cdiez7.jpg" height="60">
+<img src="https://tuneronline.ru/images/chords/guitar/max/fdiezm.jpg" height="60">
 <br>
 <br>
-<img src="https://tuneronline.ru/images/chords/guitar/max/fdiezm.jpg" height="50">
-<img src="https://tuneronline.ru/images/chords/guitar/max/a.jpg" height="50">
-<img src="https://tuneronline.ru/images/chords/guitar/max/hm.jpg" height="50">
-<img src="https://tuneronline.ru/images/chords/guitar/max/d7.jpg" height="50">
+<font face="sans-serif" size="5">На</font>
+<font face="sans-serif" size="5">«Таганской»-кольцевой</font>
+<br>
+<font face="sans-serif" size="5">Бродит</font>
+<font face="sans-serif" size="5">странный</font>
+<font face="sans-serif" size="5">гражданин</font>
+<font face="sans-serif" size="5">—</font>
+<br>
+<font face="sans-serif" size="5">Он</font>
+<font face="sans-serif" size="5">невидимый</font>
+<font face="sans-serif" size="5">вагон</font>
+<font face="sans-serif" size="5">видит</font>
+<font face="sans-serif" size="5">ясно.</font>
+<br>
+<font face="sans-serif" size="5">Каждый</font>
+<font face="sans-serif" size="5">поезд</font>
+<font face="sans-serif" size="5">ждёт-пождёт,</font>
+<br>
+<font face="sans-serif" size="5">Чтоб</font>
+<font face="sans-serif" size="5">уехать</font>
+<font face="sans-serif" size="5">вместе</font>
+<font face="sans-serif" size="5">с</font>
+<font face="sans-serif" size="5">ним,</font>
+<br>
+<font face="sans-serif" size="5">Только</font>
+<font face="sans-serif" size="5">каждый</font>
+<font face="sans-serif" size="5">раз</font>
+<font face="sans-serif" size="5">выходит</font>
+<font face="sans-serif" size="5">напрасно:</font>
+<br>
+<font face="sans-serif" size="5">Поезд</font>
+<font face="sans-serif" size="5">встанет,</font>
+<font face="sans-serif" size="5">дверь</font>
+<font face="sans-serif" size="5">вагона</font>
+<font face="sans-serif" size="5">отворит</font>
+<font face="sans-serif" size="5">—</font>
+<br>
+<font face="sans-serif" size="5">Он</font>
+<font face="sans-serif" size="5">застынет</font>
+<font face="sans-serif" size="5">и</font>
+<font face="sans-serif" size="5">восторженно</font>
+<font face="sans-serif" size="5">глядит,</font>
+<br>
+<font face="sans-serif" size="5">А</font>
+<font face="sans-serif" size="5">войти</font>
+<font face="sans-serif" size="5">всё</font>
+<font face="sans-serif" size="5">не</font>
+<font face="sans-serif" size="5">решится,</font>
+<font face="sans-serif" size="5">несчастный.</font>
+<br>
+<font face="sans-serif" size="5">А</font>
+<font face="sans-serif" size="5">войти</font>
+<font face="sans-serif" size="5">всё</font>
+<font face="sans-serif" size="5">не</font>
+<font face="sans-serif" size="5">решится,</font>
+<font face="sans-serif" size="5">несчастный.</font>
 <br>
 <br>
-<img src="https://tuneronline.ru/images/chords/guitar/max/gm.jpg" height="50">
+<img src="https://tuneronline.ru/images/chords/guitar/max/fdiezm.jpg" height="60">
+<img src="https://tuneronline.ru/images/chords/guitar/max/a.jpg" height="60">
+<img src="https://tuneronline.ru/images/chords/guitar/max/hm.jpg" height="60">
+<img src="https://tuneronline.ru/images/chords/guitar/max/d7.jpg" height="60">
 <br>
-<img src="https://tuneronline.ru/images/chords/guitar/max/cm.jpg" height="50">
 <br>
-<img src="https://tuneronline.ru/images/chords/guitar/max/d7.jpg" height="50">
-<img src="https://tuneronline.ru/images/chords/guitar/max/gm.jpg" height="50">
+<font face="sans-serif" size="5">Боже</font>
+<font face="sans-serif" size="5">праведный,</font>
+<font face="sans-serif" size="5">спаси</font>
+<img src="https://tuneronline.ru/images/chords/guitar/max/gm.jpg" height="60">
+<br>
+<font face="sans-serif" size="5">Пассажиров</font>
+<font face="sans-serif" size="5">всех</font>
+<font face="sans-serif" size="5">путей,</font>
+<img src="https://tuneronline.ru/images/chords/guitar/max/cm.jpg" height="60">
+<br>
+<font face="sans-serif" size="5">Затерявшихся</font>
+<font face="sans-serif" size="5">во</font>
+<font face="sans-serif" size="5">тьме</font>
+<font face="sans-serif" size="5">перегонов.</font>
+<img src="https://tuneronline.ru/images/chords/guitar/max/d7.jpg" height="60">
+<img src="https://tuneronline.ru/images/chords/guitar/max/gm.jpg" height="60">
 (
-<img src="https://tuneronline.ru/images/chords/guitar/max/d.jpg" height="50">
+<img src="https://tuneronline.ru/images/chords/guitar/max/d.jpg" height="60">
 )
 <br>
-<img src="https://tuneronline.ru/images/chords/guitar/max/gm.jpg" height="50">
+<font face="sans-serif" size="5">От</font>
+<font face="sans-serif" size="5">беды</font>
+<font face="sans-serif" size="5">убереги</font>
+<img src="https://tuneronline.ru/images/chords/guitar/max/gm.jpg" height="60">
 <br>
-<img src="https://tuneronline.ru/images/chords/guitar/max/cm.jpg" height="50">
-<img src="https://tuneronline.ru/images/chords/guitar/max/eb.jpg" height="50">
+<font face="sans-serif" size="5">И</font>
+<font face="sans-serif" size="5">даруй</font>
+<font face="sans-serif" size="5">отраду</font>
+<font face="sans-serif" size="5">тем,</font>
+<img src="https://tuneronline.ru/images/chords/guitar/max/cm.jpg" height="60">
+<img src="https://tuneronline.ru/images/chords/guitar/max/eb.jpg" height="60">
 <br>
-<img src="https://tuneronline.ru/images/chords/guitar/max/f.jpg" height="50">
-<img src="https://tuneronline.ru/images/chords/guitar/max/bb.jpg" height="50">
+<font face="sans-serif" size="5">Кто</font>
+<font face="sans-serif" size="5">невидимые</font>
+<font face="sans-serif" size="5">видит</font>
+<font face="sans-serif" size="5">вагоны.</font>
+<img src="https://tuneronline.ru/images/chords/guitar/max/f.jpg" height="60">
+<img src="https://tuneronline.ru/images/chords/guitar/max/bb.jpg" height="60">
 <br>
-<img src="https://tuneronline.ru/images/chords/guitar/max/cm.jpg" height="50">
-<img src="https://tuneronline.ru/images/chords/guitar/max/d7.jpg" height="50">
-<img src="https://tuneronline.ru/images/chords/guitar/max/gm.jpg" height="50">
+<font face="sans-serif" size="5">Из</font>
+<font face="sans-serif" size="5">тоннеля</font>
+<font face="sans-serif" size="5">дай</font>
+<font face="sans-serif" size="5">нам</font>
+<font face="sans-serif" size="5">выехать</font>
+<font face="sans-serif" size="5">на</font>
+<font face="sans-serif" size="5">свет,</font>
+<img src="https://tuneronline.ru/images/chords/guitar/max/cm.jpg" height="60">
+<img src="https://tuneronline.ru/images/chords/guitar/max/d7.jpg" height="60">
+<img src="https://tuneronline.ru/images/chords/guitar/max/gm.jpg" height="60">
 <br>
-<img src="https://tuneronline.ru/images/chords/guitar/max/cm.jpg" height="50">
-<img src="https://tuneronline.ru/images/chords/guitar/max/d7.jpg" height="50">
-<img src="https://tuneronline.ru/images/chords/guitar/max/gm.jpg" height="50">
-<img src="https://tuneronline.ru/images/chords/guitar/max/g7.jpg" height="50">
+<font face="sans-serif" size="5">Где</font>
+<font face="sans-serif" size="5">не</font>
+<font face="sans-serif" size="5">нужен</font>
+<font face="sans-serif" size="5">ни</font>
+<font face="sans-serif" size="5">билет,</font>
+<font face="sans-serif" size="5">ни</font>
+<font face="sans-serif" size="5">турникет</font>
+<img src="https://tuneronline.ru/images/chords/guitar/max/cm.jpg" height="60">
+<img src="https://tuneronline.ru/images/chords/guitar/max/d7.jpg" height="60">
+<img src="https://tuneronline.ru/images/chords/guitar/max/gm.jpg" height="60">
+<img src="https://tuneronline.ru/images/chords/guitar/max/g7.jpg" height="60">
 <br>
-<img src="https://tuneronline.ru/images/chords/guitar/max/cm.jpg" height="50">
-<img src="https://tuneronline.ru/images/chords/guitar/max/d7.jpg" height="50">
-<img src="https://tuneronline.ru/images/chords/guitar/max/eb.jpg" height="50">
+<font face="sans-serif" size="5">И</font>
+<font face="sans-serif" size="5">вообще</font>
+<font face="sans-serif" size="5">как</font>
+<font face="sans-serif" size="5">будто</font>
+<font face="sans-serif" size="5">всё</font>
+<font face="sans-serif" size="5">по-другому,</font>
+<img src="https://tuneronline.ru/images/chords/guitar/max/cm.jpg" height="60">
+<img src="https://tuneronline.ru/images/chords/guitar/max/d7.jpg" height="60">
+<img src="https://tuneronline.ru/images/chords/guitar/max/eb.jpg" height="60">
 (
-<img src="https://tuneronline.ru/images/chords/guitar/max/d.jpg" height="50">
+<img src="https://tuneronline.ru/images/chords/guitar/max/d.jpg" height="60">
 )
 <br>
-<img src="https://tuneronline.ru/images/chords/guitar/max/cm.jpg" height="50">
-<img src="https://tuneronline.ru/images/chords/guitar/max/e7.jpg" height="50">
-<img src="https://tuneronline.ru/images/chords/guitar/max/gm.jpg" height="50">
+<font face="sans-serif" size="5">И</font>
+<font face="sans-serif" size="5">вообще</font>
+<font face="sans-serif" size="5">как</font>
+<font face="sans-serif" size="5">будто</font>
+<font face="sans-serif" size="5">всё</font>
+<font face="sans-serif" size="5">по-другому.</font>
+<img src="https://tuneronline.ru/images/chords/guitar/max/cm.jpg" height="60">
+<img src="https://tuneronline.ru/images/chords/guitar/max/e7.jpg" height="60">
+<img src="https://tuneronline.ru/images/chords/guitar/max/gm.jpg" height="60">
 <br>
 <br>
-<img src="https://tuneronline.ru/images/chords/guitar/max/gm.jpg" height="50">
-<img src="https://tuneronline.ru/images/chords/guitar/max/bb.jpg" height="50">
-<img src="https://tuneronline.ru/images/chords/guitar/max/cm.jpg" height="50">
-<img src="https://tuneronline.ru/images/chords/guitar/max/d7.jpg" height="50">
-<img src="https://tuneronline.ru/images/chords/guitar/max/gm.jpg" height="50">
+<img src="https://tuneronline.ru/images/chords/guitar/max/gm.jpg" height="60">
+<img src="https://tuneronline.ru/images/chords/guitar/max/bb.jpg" height="60">
+<img src="https://tuneronline.ru/images/chords/guitar/max/cm.jpg" height="60">
+<img src="https://tuneronline.ru/images/chords/guitar/max/d7.jpg" height="60">
+<img src="https://tuneronline.ru/images/chords/guitar/max/gm.jpg" height="60">
 <br>
