Optimize result file size, some code changes

--- a/unseen.html
+++ b/unseen.html
@@ -1,82 +1,83 @@
 <meta charset="utf-8">
+<font face="sans-serif" size="3">
 <img src="https://tuneronline.ru/images/chords/guitar/max/fdiezm.jpg" height="40">
 <img src="https://tuneronline.ru/images/chords/guitar/max/a.jpg" height="40">
 <img src="https://tuneronline.ru/images/chords/guitar/max/hm.jpg" height="40">
 <img src="https://tuneronline.ru/images/chords/guitar/max/cdiez7.jpg" height="40">
 <br>
 <br>
-<font face="sans-serif" size="3">В</font>
-<font face="sans-serif" size="3">каждом</font>
-<font face="sans-serif" size="3">поезде</font>
-<font face="sans-serif" size="3">метро</font>
+В
+каждом
+поезде
+метро
 <img src="https://tuneronline.ru/images/chords/guitar/max/fdiezm.jpg" height="40">
 <br>
-<font face="sans-serif" size="3">Есть</font>
-<font face="sans-serif" size="3">невидимый</font>
-<font face="sans-serif" size="3">вагон,</font>
+Есть
+невидимый
+вагон,
 <img src="https://tuneronline.ru/images/chords/guitar/max/hm.jpg" height="40">
 <br>
-<font face="sans-serif" size="3">Он</font>
-<font face="sans-serif" size="3">над</font>
-<font face="sans-serif" size="3">рельсами</font>
-<font face="sans-serif" size="3">парит</font>
-<font face="sans-serif" size="3">невесомо.</font>
+Он
+над
+рельсами
+парит
+невесомо.
 <img src="https://tuneronline.ru/images/chords/guitar/max/cdiez7.jpg" height="40">
 <img src="https://tuneronline.ru/images/chords/guitar/max/fdiezm.jpg" height="40">
 (
 <img src="https://tuneronline.ru/images/chords/guitar/max/cdiez.jpg" height="40">
 )
 <br>
-<font face="sans-serif" size="3">Там</font>
-<font face="sans-serif" size="3">лучится</font>
-<font face="sans-serif" size="3">дивный</font>
-<font face="sans-serif" size="3">свет,</font>
+Там
+лучится
+дивный
+свет,
 <img src="https://tuneronline.ru/images/chords/guitar/max/fdiezm.jpg" height="40">
 <br>
-<font face="sans-serif" size="3">Там</font>
-<font face="sans-serif" size="3">журчит</font>
-<font face="sans-serif" size="3">хрустальный</font>
-<font face="sans-serif" size="3">звон,</font>
+Там
+журчит
+хрустальный
+звон,
 <img src="https://tuneronline.ru/images/chords/guitar/max/hm.jpg" height="40">
 <img src="https://tuneronline.ru/images/chords/guitar/max/d.jpg" height="40">
 <br>
-<font face="sans-serif" size="3">И</font>
-<font face="sans-serif" size="3">вообще</font>
-<font face="sans-serif" size="3">как</font>
-<font face="sans-serif" size="3">будто</font>
-<font face="sans-serif" size="3">всё</font>
-<font face="sans-serif" size="3">по-другому.</font>
+И
+вообще
+как
+будто
+всё
+по-другому.
 <img src="https://tuneronline.ru/images/chords/guitar/max/e.jpg" height="40">
 <img src="https://tuneronline.ru/images/chords/guitar/max/a.jpg" height="40">
 <br>
-<font face="sans-serif" size="3">Так</font>
-<font face="sans-serif" size="3">красиво,</font>
-<font face="sans-serif" size="3">что</font>
-<font face="sans-serif" size="3">не</font>
-<font face="sans-serif" size="3">верится</font>
-<font face="sans-serif" size="3">глазам.</font>
+Так
+красиво,
+что
+не
+верится
+глазам.
 <img src="https://tuneronline.ru/images/chords/guitar/max/hm.jpg" height="40">
 <img src="https://tuneronline.ru/images/chords/guitar/max/cdiez7.jpg" height="40">
 <img src="https://tuneronline.ru/images/chords/guitar/max/fdiezm.jpg" height="40">
 <br>
-<font face="sans-serif" size="3">В</font>
-<font face="sans-serif" size="3">нём</font>
-<font face="sans-serif" size="3">уедешь</font>
-<font face="sans-serif" size="3">—</font>
-<font face="sans-serif" size="3">не</font>
-<font face="sans-serif" size="3">воротишься</font>
-<font face="sans-serif" size="3">назад,</font>
+В
+нём
+уедешь
+—
+не
+воротишься
+назад,
 <img src="https://tuneronline.ru/images/chords/guitar/max/hm.jpg" height="40">
 <img src="https://tuneronline.ru/images/chords/guitar/max/cdiez7.jpg" height="40">
 <img src="https://tuneronline.ru/images/chords/guitar/max/fdiezm.jpg" height="40">
 <img src="https://tuneronline.ru/images/chords/guitar/max/fdiez7.jpg" height="40">
 <br>
-<font face="sans-serif" size="3">Не</font>
-<font face="sans-serif" size="3">подашь</font>
-<font face="sans-serif" size="3">вестей</font>
-<font face="sans-serif" size="3">родным</font>
-<font face="sans-serif" size="3">и</font>
-<font face="sans-serif" size="3">знакомым,</font>
+Не
+подашь
+вестей
+родным
+и
+знакомым,
 <img src="https://tuneronline.ru/images/chords/guitar/max/hm.jpg" height="40">
 <img src="https://tuneronline.ru/images/chords/guitar/max/cdiez7.jpg" height="40">
 <img src="https://tuneronline.ru/images/chords/guitar/max/d.jpg" height="40">
@@ -84,73 +85,73 @@
 <img src="https://tuneronline.ru/images/chords/guitar/max/fdiez.jpg" height="40">
 )
 <br>
-<font face="sans-serif" size="3">Не</font>
-<font face="sans-serif" size="3">подашь</font>
-<font face="sans-serif" size="3">вестей</font>
-<font face="sans-serif" size="3">родным</font>
-<font face="sans-serif" size="3">и</font>
-<font face="sans-serif" size="3">знакомым.</font>
+Не
+подашь
+вестей
+родным
+и
+знакомым.
 <img src="https://tuneronline.ru/images/chords/guitar/max/hm.jpg" height="40">
 <img src="https://tuneronline.ru/images/chords/guitar/max/cdiez7.jpg" height="40">
 <img src="https://tuneronline.ru/images/chords/guitar/max/fdiezm.jpg" height="40">
 <br>
 <br>
-<font face="sans-serif" size="3">На</font>
-<font face="sans-serif" size="3">«Таганской»-кольцевой</font>
+На
+«Таганской»-кольцевой
 <br>
-<font face="sans-serif" size="3">Бродит</font>
-<font face="sans-serif" size="3">странный</font>
-<font face="sans-serif" size="3">гражданин</font>
-<font face="sans-serif" size="3">—</font>
+Бродит
+странный
+гражданин
+—
 <br>
-<font face="sans-serif" size="3">Он</font>
-<font face="sans-serif" size="3">невидимый</font>
-<font face="sans-serif" size="3">вагон</font>
-<font face="sans-serif" size="3">видит</font>
-<font face="sans-serif" size="3">ясно.</font>
+Он
+невидимый
+вагон
+видит
+ясно.
 <br>
-<font face="sans-serif" size="3">Каждый</font>
-<font face="sans-serif" size="3">поезд</font>
-<font face="sans-serif" size="3">ждёт-пождёт,</font>
+Каждый
+поезд
+ждёт-пождёт,
 <br>
-<font face="sans-serif" size="3">Чтоб</font>
-<font face="sans-serif" size="3">уехать</font>
-<font face="sans-serif" size="3">вместе</font>
-<font face="sans-serif" size="3">с</font>
-<font face="sans-serif" size="3">ним,</font>
+Чтоб
+уехать
+вместе
+с
+ним,
 <br>
-<font face="sans-serif" size="3">Только</font>
-<font face="sans-serif" size="3">каждый</font>
-<font face="sans-serif" size="3">раз</font>
-<font face="sans-serif" size="3">выходит</font>
-<font face="sans-serif" size="3">напрасно:</font>
+Только
+каждый
+раз
+выходит
+напрасно:
 <br>
-<font face="sans-serif" size="3">Поезд</font>
-<font face="sans-serif" size="3">встанет,</font>
-<font face="sans-serif" size="3">дверь</font>
-<font face="sans-serif" size="3">вагона</font>
-<font face="sans-serif" size="3">отворит</font>
-<font face="sans-serif" size="3">—</font>
+Поезд
+встанет,
+дверь
+вагона
+отворит
+—
 <br>
-<font face="sans-serif" size="3">Он</font>
-<font face="sans-serif" size="3">застынет</font>
-<font face="sans-serif" size="3">и</font>
-<font face="sans-serif" size="3">восторженно</font>
-<font face="sans-serif" size="3">глядит,</font>
+Он
+застынет
+и
+восторженно
+глядит,
 <br>
-<font face="sans-serif" size="3">А</font>
-<font face="sans-serif" size="3">войти</font>
-<font face="sans-serif" size="3">всё</font>
-<font face="sans-serif" size="3">не</font>
-<font face="sans-serif" size="3">решится,</font>
-<font face="sans-serif" size="3">несчастный.</font>
+А
+войти
+всё
+не
+решится,
+несчастный.
 <br>
-<font face="sans-serif" size="3">А</font>
-<font face="sans-serif" size="3">войти</font>
-<font face="sans-serif" size="3">всё</font>
-<font face="sans-serif" size="3">не</font>
-<font face="sans-serif" size="3">решится,</font>
-<font face="sans-serif" size="3">несчастный.</font>
+А
+войти
+всё
+не
+решится,
+несчастный.
 <br>
 <br>
 <img src="https://tuneronline.ru/images/chords/guitar/max/fdiezm.jpg" height="40">
@@ -159,74 +160,74 @@
 <img src="https://tuneronline.ru/images/chords/guitar/max/d7.jpg" height="40">
 <br>
 <br>
-<font face="sans-serif" size="3">Боже</font>
-<font face="sans-serif" size="3">праведный,</font>
-<font face="sans-serif" size="3">спаси</font>
+Боже
+праведный,
+спаси
 <img src="https://tuneronline.ru/images/chords/guitar/max/gm.jpg" height="40">
 <br>
-<font face="sans-serif" size="3">Пассажиров</font>
-<font face="sans-serif" size="3">всех</font>
-<font face="sans-serif" size="3">путей,</font>
+Пассажиров
+всех
+путей,
 <img src="https://tuneronline.ru/images/chords/guitar/max/cm.jpg" height="40">
 <br>
-<font face="sans-serif" size="3">Затерявшихся</font>
-<font face="sans-serif" size="3">во</font>
-<font face="sans-serif" size="3">тьме</font>
-<font face="sans-serif" size="3">перегонов.</font>
+Затерявшихся
+во
+тьме
+перегонов.
 <img src="https://tuneronline.ru/images/chords/guitar/max/d7.jpg" height="40">
 <img src="https://tuneronline.ru/images/chords/guitar/max/gm.jpg" height="40">
 (
 <img src="https://tuneronline.ru/images/chords/guitar/max/d.jpg" height="40">
 )
 <br>
-<font face="sans-serif" size="3">От</font>
-<font face="sans-serif" size="3">беды</font>
-<font face="sans-serif" size="3">убереги</font>
+От
+беды
+убереги
 <img src="https://tuneronline.ru/images/chords/guitar/max/gm.jpg" height="40">
 <br>
-<font face="sans-serif" size="3">И</font>
-<font face="sans-serif" size="3">даруй</font>
-<font face="sans-serif" size="3">отраду</font>
-<font face="sans-serif" size="3">тем,</font>
+И
+даруй
+отраду
+тем,
 <img src="https://tuneronline.ru/images/chords/guitar/max/cm.jpg" height="40">
 <img src="https://tuneronline.ru/images/chords/guitar/max/eb.jpg" height="40">
 <br>
-<font face="sans-serif" size="3">Кто</font>
-<font face="sans-serif" size="3">невидимые</font>
-<font face="sans-serif" size="3">видит</font>
-<font face="sans-serif" size="3">вагоны.</font>
+Кто
+невидимые
+видит
+вагоны.
 <img src="https://tuneronline.ru/images/chords/guitar/max/f.jpg" height="40">
 <img src="https://tuneronline.ru/images/chords/guitar/max/bb.jpg" height="40">
 <br>
-<font face="sans-serif" size="3">Из</font>
-<font face="sans-serif" size="3">тоннеля</font>
-<font face="sans-serif" size="3">дай</font>
-<font face="sans-serif" size="3">нам</font>
-<font face="sans-serif" size="3">выехать</font>
-<font face="sans-serif" size="3">на</font>
-<font face="sans-serif" size="3">свет,</font>
+Из
+тоннеля
+дай
+нам
+выехать
+на
+свет,
 <img src="https://tuneronline.ru/images/chords/guitar/max/cm.jpg" height="40">
 <img src="https://tuneronline.ru/images/chords/guitar/max/d7.jpg" height="40">
 <img src="https://tuneronline.ru/images/chords/guitar/max/gm.jpg" height="40">
 <br>
-<font face="sans-serif" size="3">Где</font>
-<font face="sans-serif" size="3">не</font>
-<font face="sans-serif" size="3">нужен</font>
-<font face="sans-serif" size="3">ни</font>
-<font face="sans-serif" size="3">билет,</font>
-<font face="sans-serif" size="3">ни</font>
-<font face="sans-serif" size="3">турникет</font>
+Где
+не
+нужен
+ни
+билет,
+ни
+турникет
 <img src="https://tuneronline.ru/images/chords/guitar/max/cm.jpg" height="40">
 <img src="https://tuneronline.ru/images/chords/guitar/max/d7.jpg" height="40">
 <img src="https://tuneronline.ru/images/chords/guitar/max/gm.jpg" height="40">
 <img src="https://tuneronline.ru/images/chords/guitar/max/g7.jpg" height="40">
 <br>
-<font face="sans-serif" size="3">И</font>
-<font face="sans-serif" size="3">вообще</font>
-<font face="sans-serif" size="3">как</font>
-<font face="sans-serif" size="3">будто</font>
-<font face="sans-serif" size="3">всё</font>
-<font face="sans-serif" size="3">по-другому,</font>
+И
+вообще
+как
+будто
+всё
+по-другому,
 <img src="https://tuneronline.ru/images/chords/guitar/max/cm.jpg" height="40">
 <img src="https://tuneronline.ru/images/chords/guitar/max/d7.jpg" height="40">
 <img src="https://tuneronline.ru/images/chords/guitar/max/eb.jpg" height="40">
@@ -234,12 +235,12 @@
 <img src="https://tuneronline.ru/images/chords/guitar/max/d.jpg" height="40">
 )
 <br>
-<font face="sans-serif" size="3">И</font>
-<font face="sans-serif" size="3">вообще</font>
-<font face="sans-serif" size="3">как</font>
-<font face="sans-serif" size="3">будто</font>
-<font face="sans-serif" size="3">всё</font>
-<font face="sans-serif" size="3">по-другому.</font>
+И
+вообще
+как
+будто
+всё
+по-другому.
 <img src="https://tuneronline.ru/images/chords/guitar/max/cm.jpg" height="40">
 <img src="https://tuneronline.ru/images/chords/guitar/max/e7.jpg" height="40">
 <img src="https://tuneronline.ru/images/chords/guitar/max/gm.jpg" height="40">
@@ -251,3 +252,4 @@
 <img src="https://tuneronline.ru/images/chords/guitar/max/d7.jpg" height="40">
 <img src="https://tuneronline.ru/images/chords/guitar/max/gm.jpg" height="40">
 <br>
+</font>
