Alignment using HTML <table> tag

--- a/unseen.html
+++ b/unseen.html
@@ -1,65 +1,85 @@
 <meta charset="utf-8">
 <font face="sans-serif" size="3">
+<table>
+<tr><td>
+</td><td>
 <img src="https://tuneronline.ru/images/chords/guitar/max/fdiezm.jpg" height="40">
 <img src="https://tuneronline.ru/images/chords/guitar/max/a.jpg" height="40">
 <img src="https://tuneronline.ru/images/chords/guitar/max/hm.jpg" height="40">
 <img src="https://tuneronline.ru/images/chords/guitar/max/cdiez7.jpg" height="40">
-<br>
-<br>
+</td></tr>
+<tr><td>
+</td><td>
+</td></tr>
+<tr><td>
 В
 каждом
 поезде
 метро
+</td><td>
 <img src="https://tuneronline.ru/images/chords/guitar/max/fdiezm.jpg" height="40">
-<br>
+</td></tr>
+<tr><td>
 Есть
 невидимый
 вагон,
+</td><td>
 <img src="https://tuneronline.ru/images/chords/guitar/max/hm.jpg" height="40">
-<br>
+</td></tr>
+<tr><td>
 Он
 над
 рельсами
 парит
 невесомо.
+</td><td>
 <img src="https://tuneronline.ru/images/chords/guitar/max/cdiez7.jpg" height="40">
 <img src="https://tuneronline.ru/images/chords/guitar/max/fdiezm.jpg" height="40">
 (
 <img src="https://tuneronline.ru/images/chords/guitar/max/cdiez.jpg" height="40">
 )
-<br>
+</td></tr>
+<tr><td>
 Там
 лучится
 дивный
 свет,
+</td><td>
 <img src="https://tuneronline.ru/images/chords/guitar/max/fdiezm.jpg" height="40">
-<br>
+</td></tr>
+<tr><td>
 Там
 журчит
 хрустальный
 звон,
+</td><td>
 <img src="https://tuneronline.ru/images/chords/guitar/max/hm.jpg" height="40">
 <img src="https://tuneronline.ru/images/chords/guitar/max/d.jpg" height="40">
-<br>
+</td></tr>
+<tr><td>
 И
 вообще
 как
 будто
 всё
 по-другому.
+</td><td>
 <img src="https://tuneronline.ru/images/chords/guitar/max/e.jpg" height="40">
 <img src="https://tuneronline.ru/images/chords/guitar/max/a.jpg" height="40">
-<br>
+</td></tr>
+<tr><td>
 Так
 красиво,
 что
 не
 верится
 глазам.
+</td><td>
 <img src="https://tuneronline.ru/images/chords/guitar/max/hm.jpg" height="40">
 <img src="https://tuneronline.ru/images/chords/guitar/max/cdiez7.jpg" height="40">
 <img src="https://tuneronline.ru/images/chords/guitar/max/fdiezm.jpg" height="40">
-<br>
+</td></tr>
+<tr><td>
 В
 нём
 уедешь
@@ -67,138 +87,184 @@
 не
 воротишься
 назад,
+</td><td>
 <img src="https://tuneronline.ru/images/chords/guitar/max/hm.jpg" height="40">
 <img src="https://tuneronline.ru/images/chords/guitar/max/cdiez7.jpg" height="40">
 <img src="https://tuneronline.ru/images/chords/guitar/max/fdiezm.jpg" height="40">
 <img src="https://tuneronline.ru/images/chords/guitar/max/fdiez7.jpg" height="40">
-<br>
+</td></tr>
+<tr><td>
 Не
 подашь
 вестей
 родным
 и
 знакомым,
+</td><td>
 <img src="https://tuneronline.ru/images/chords/guitar/max/hm.jpg" height="40">
 <img src="https://tuneronline.ru/images/chords/guitar/max/cdiez7.jpg" height="40">
 <img src="https://tuneronline.ru/images/chords/guitar/max/d.jpg" height="40">
 (
 <img src="https://tuneronline.ru/images/chords/guitar/max/fdiez.jpg" height="40">
 )
-<br>
+</td></tr>
+<tr><td>
 Не
 подашь
 вестей
 родным
 и
 знакомым.
+</td><td>
 <img src="https://tuneronline.ru/images/chords/guitar/max/hm.jpg" height="40">
 <img src="https://tuneronline.ru/images/chords/guitar/max/cdiez7.jpg" height="40">
 <img src="https://tuneronline.ru/images/chords/guitar/max/fdiezm.jpg" height="40">
-<br>
-<br>
+</td></tr>
+<tr><td>
+</td><td>
+</td></tr>
+<tr><td>
 На
 «Таганской»-кольцевой
-<br>
+</td><td>
+</td></tr>
+<tr><td>
 Бродит
 странный
 гражданин
 —
-<br>
+</td><td>
+</td></tr>
+<tr><td>
 Он
 невидимый
 вагон
 видит
 ясно.
-<br>
+</td><td>
+</td></tr>
+<tr><td>
 Каждый
 поезд
 ждёт-пождёт,
-<br>
+</td><td>
+</td></tr>
+<tr><td>
 Чтоб
 уехать
 вместе
 с
 ним,
-<br>
+</td><td>
+</td></tr>
+<tr><td>
 Только
 каждый
 раз
 выходит
 напрасно:
-<br>
+</td><td>
+</td></tr>
+<tr><td>
 Поезд
 встанет,
 дверь
 вагона
 отворит
 —
-<br>
+</td><td>
+</td></tr>
+<tr><td>
 Он
 застынет
 и
 восторженно
 глядит,
-<br>
+</td><td>
+</td></tr>
+<tr><td>
 А
 войти
 всё
 не
 решится,
 несчастный.
-<br>
+</td><td>
+</td></tr>
+<tr><td>
 А
 войти
 всё
 не
 решится,
 несчастный.
-<br>
-<br>
+</td><td>
+</td></tr>
+<tr><td>
+</td><td>
+</td></tr>
+<tr><td>
+</td><td>
 <img src="https://tuneronline.ru/images/chords/guitar/max/fdiezm.jpg" height="40">
 <img src="https://tuneronline.ru/images/chords/guitar/max/a.jpg" height="40">
 <img src="https://tuneronline.ru/images/chords/guitar/max/hm.jpg" height="40">
 <img src="https://tuneronline.ru/images/chords/guitar/max/d7.jpg" height="40">
-<br>
-<br>
+</td></tr>
+<tr><td>
+</td><td>
+</td></tr>
+<tr><td>
 Боже
 праведный,
 спаси
+</td><td>
 <img src="https://tuneronline.ru/images/chords/guitar/max/gm.jpg" height="40">
-<br>
+</td></tr>
+<tr><td>
 Пассажиров
 всех
 путей,
+</td><td>
 <img src="https://tuneronline.ru/images/chords/guitar/max/cm.jpg" height="40">
-<br>
+</td></tr>
+<tr><td>
 Затерявшихся
 во
 тьме
 перегонов.
+</td><td>
 <img src="https://tuneronline.ru/images/chords/guitar/max/d7.jpg" height="40">
 <img src="https://tuneronline.ru/images/chords/guitar/max/gm.jpg" height="40">
 (
 <img src="https://tuneronline.ru/images/chords/guitar/max/d.jpg" height="40">
 )
-<br>
+</td></tr>
+<tr><td>
 От
 беды
 убереги
+</td><td>
 <img src="https://tuneronline.ru/images/chords/guitar/max/gm.jpg" height="40">
-<br>
+</td></tr>
+<tr><td>
 И
 даруй
 отраду
 тем,
+</td><td>
 <img src="https://tuneronline.ru/images/chords/guitar/max/cm.jpg" height="40">
 <img src="https://tuneronline.ru/images/chords/guitar/max/eb.jpg" height="40">
-<br>
+</td></tr>
+<tr><td>
 Кто
 невидимые
 видит
 вагоны.
+</td><td>
 <img src="https://tuneronline.ru/images/chords/guitar/max/f.jpg" height="40">
 <img src="https://tuneronline.ru/images/chords/guitar/max/bb.jpg" height="40">
-<br>
+</td></tr>
+<tr><td>
 Из
 тоннеля
 дай
@@ -206,10 +272,12 @@
 выехать
 на
 свет,
+</td><td>
 <img src="https://tuneronline.ru/images/chords/guitar/max/cm.jpg" height="40">
 <img src="https://tuneronline.ru/images/chords/guitar/max/d7.jpg" height="40">
 <img src="https://tuneronline.ru/images/chords/guitar/max/gm.jpg" height="40">
-<br>
+</td></tr>
+<tr><td>
 Где
 не
 нужен
@@ -217,39 +285,49 @@
 билет,
 ни
 турникет
+</td><td>
 <img src="https://tuneronline.ru/images/chords/guitar/max/cm.jpg" height="40">
 <img src="https://tuneronline.ru/images/chords/guitar/max/d7.jpg" height="40">
 <img src="https://tuneronline.ru/images/chords/guitar/max/gm.jpg" height="40">
 <img src="https://tuneronline.ru/images/chords/guitar/max/g7.jpg" height="40">
-<br>
+</td></tr>
+<tr><td>
 И
 вообще
 как
 будто
 всё
 по-другому,
+</td><td>
 <img src="https://tuneronline.ru/images/chords/guitar/max/cm.jpg" height="40">
 <img src="https://tuneronline.ru/images/chords/guitar/max/d7.jpg" height="40">
 <img src="https://tuneronline.ru/images/chords/guitar/max/eb.jpg" height="40">
 (
 <img src="https://tuneronline.ru/images/chords/guitar/max/d.jpg" height="40">
 )
-<br>
+</td></tr>
+<tr><td>
 И
 вообще
 как
 будто
 всё
 по-другому.
+</td><td>
 <img src="https://tuneronline.ru/images/chords/guitar/max/cm.jpg" height="40">
 <img src="https://tuneronline.ru/images/chords/guitar/max/e7.jpg" height="40">
 <img src="https://tuneronline.ru/images/chords/guitar/max/gm.jpg" height="40">
-<br>
-<br>
+</td></tr>
+<tr><td>
+</td><td>
+</td></tr>
+<tr><td>
+</td><td>
 <img src="https://tuneronline.ru/images/chords/guitar/max/gm.jpg" height="40">
 <img src="https://tuneronline.ru/images/chords/guitar/max/bb.jpg" height="40">
 <img src="https://tuneronline.ru/images/chords/guitar/max/cm.jpg" height="40">
 <img src="https://tuneronline.ru/images/chords/guitar/max/d7.jpg" height="40">
 <img src="https://tuneronline.ru/images/chords/guitar/max/gm.jpg" height="40">
-<br>
+</td></tr>
 </font>
+</table>
